--- a/home.css
+++ b/home.css
@@ -7,7 +7,7 @@
     --light-bg:rgba(255,255,255,.1);
     --white:#fff;
     --black:#000;
-    background-image: url('/home01.jpg');
+    background-image: url('/assets/home01.jpg');
     
  }
 
